--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "egg-scripts": "^2.5.0",
     "egg-validate": "^1.0.0",
     "mocha": "^5.1.1",
-    "node-uuid": "^1.4.8"
+    "node-uuid": "^1.4.8",
+    "nodemailer": "^6.0.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
     "autod-egg": "^1.0.0",
-    "egg-bin": "^4.3.5",
+    "egg-bin": "^4.12.1",
     "egg-ci": "^1.8.0",
     "egg-mock": "^3.14.0",
     "eslint": "^4.11.0",
