--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "for school",
   "private": true,
   "dependencies": {
+    "child_process": "^1.0.2",
     "co-mocha": "^1.2.2",
     "crypto": "^1.0.1",
     "egg": "^2.2.1",
@@ -17,7 +18,7 @@
   "devDependencies": {
     "autod": "^3.0.1",
     "autod-egg": "^1.0.0",
-    "egg-bin": "^4.12.1",
+    "egg-bin": "^4.13.0",
     "egg-ci": "^1.8.0",
     "egg-mock": "^3.14.0",
     "eslint": "^4.11.0",
