node升级，npm update

--- a/package.json
+++ b/package.json
@@ -7,20 +7,21 @@
     "child_process": "^1.0.2",
     "co-mocha": "^1.2.2",
     "crypto": "^1.0.1",
-    "egg": "^2.2.1",
+    "egg": "^2.22.2",
     "egg-mysql": "^3.0.0",
-    "egg-scripts": "^2.5.0",
-    "egg-validate": "^1.0.0",
+    "egg-scripts": "^2.11.0",
+    "egg-validate": "^1.1.1",
     "mocha": "^5.1.1",
+    "mysql": "^2.17.1",
     "node-uuid": "^1.4.8",
-    "nodemailer": "^6.0.0"
+    "nodemailer": "^6.1.1"
   },
   "devDependencies": {
-    "autod": "^3.0.1",
+    "autod": "^3.1.0",
     "autod-egg": "^1.0.0",
-    "egg-bin": "^4.13.0",
-    "egg-ci": "^1.8.0",
-    "egg-mock": "^3.14.0",
+    "egg-bin": "^4.13.1",
+    "egg-ci": "^1.12.0",
+    "egg-mock": "^3.22.4",
     "eslint": "^4.11.0",
     "eslint-config-egg": "^6.0.0",
     "webstorm-disable-index": "^1.2.0"
