--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "egg-scripts": "^2.11.0",
     "egg-validate": "^1.1.1",
     "mocha": "^5.1.1",
+    "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "node-uuid": "^1.4.8",
     "nodemailer": "^6.1.1"
